--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome Page</title>
-    <link rel="stylesheet" href="./css/welcomePg.css">
+    <!-- <link rel="stylesheet" href="./css/welcomePg.css"> -->
 
     <style>
         *{
@@ -91,14 +91,20 @@ h2 button{
 /* Responsiveness */
 
 @media screen and (max-width: 767px) {
+    body{
+        width: 100vw;
+        height: 100vh;
+    }
     .body h1 {
         font-size: 2rem;
         top: 15%;
+        color: brown;
     }
     h2 {
         font-size: 1.5rem;
         top: 60%;
         right: 5%;
+        color: brown;
     }
     h1 .button{
         font-size: 20px;
