--- a/index.html
+++ b/index.html
@@ -4,139 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome Page</title>
-    <!-- <link rel="stylesheet" href="welcomePg.css"> -->
-
-    <style>
-        *{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-.body{
-    width: 100vw;
-    height: 100vh;
-    background-image: url(./img/83decb21-258d-425d-a8ac-4c98c4512f05-shutterstock-1128225152\ \(1\).jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;   
-}
-.logo{
-    position: absolute;
-    top: 0;
-    left: 0;
-    max-width: 100%; /* Allow the logo to resize based on screen size */
-    height: auto;
-}
-.logo img{
-    position: relative;
-}
-
-.body h1{
-    color: white;
-    text-shadow: -1px -1px brown, 1px -1px 0 brown, -1px 1px 0 brown, 1px 1px 0 brown;
-    font-size: 4rem;
-    position: absolute;
-    top: 20%;
-    left: 20%;
-}
-
-.button{
-    display: inline-block;
-    position: relative;
-    width: 210px;
-    height: 50px;
-    border-radius: 15px;
-    border: 2px solid whitesmoke;
-    background-color: brown;
-    color: white;
-    /* top: 20px; */
-    font-size: 30px;
-    font-weight: 600;
-}
-.button:hover{
-    cursor: pointer;
-    color: white;
-    background-color: rgba(222, 184, 135);
-    border: 2px solid gray;
-    font-weight: 800;
-}
-
-h1 .button{
-    top: 70px;
-    left: -300px;
-}
-
-h2{
-    color: white;
-    text-shadow: -1px -1px brown, 1px -1px 0 brown, -1px 1px 0 brown, 1px 1px 0 brown;
-    font-size: 3rem;
-    position: absolute;
-    top: 70%;
-    right: 10%;
-}
-h2 span{
-    display: block;
-}
-h2 button{
-    /* right: 0px; */
-    display: block;
-    left: 60%;
-    width: 140px;
-    height: 33.73px;
-    font-size: 26.25px;
-    /* top: 70px; */
-}
-
-/* Responsiveness */
-
-@media screen and (max-width: 767px) {
-    body{
-        width: 100vw;
-        height: 100vh;
-    }
-    .body h1 {
-        font-size: 2rem;
-        top: 15%;
-        color: brown;
-    }
-    h2 {
-        font-size: 1.5rem;
-        top: 60%;
-        right: 5%;
-        color: brown;
-    }
-    h1 .button{
-        font-size: 20px;
-        left: 50%;
-        transform: translateX(-50%);
-    }
-    h2 button {
-        font-size: 20px;
-        left: 50%;
-        transform: translateX(-50%); /* Center horizontally */
-    }
-  }
-    </style>
+    <link rel="stylesheet" href="./css/welcomePg.css">
 </head>
 
 <body>
-    <div class="body">
-        <div class="logo">
-            <img src="./img/Untitled_design-removebg-preview.png" alt="" style="height: 100% ; width: 100%;">
-        </div>
+    <div class="logo">
+        <img src="./img/Untitled_design-removebg-preview.png" alt="" style="height: 100% ; width: 100%;">
+    </div>
+    <div class="body1">
         <h1>Welcome to a place where you not <br>
             only shop but you choose and own <br>
             your style.
-            <a href="./sign-up.html">
-                <button class="signup button">Sign-Up</button>
-            </a>
         </h1>
+        <a href="./sign-up.html">
+            <button class="signup button">Sign-Up</button>
+        </a>
+    </div> 
+
+    <div class="body2">
         <h2>
-            <span>Already have an account?</span>
-            <button class="login button">Login</button>
+            Already have an account?
         </h2>
-        
+        <a href="#">
+            <button class="login button">Login</button>
+        </a>
     </div>
    
 </body>
