--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="logo">
-        <img src="./img/Untitled_design-removebg-preview.png" alt="" style="height: 100% ; width: 100%;">
+        <img src="Untitled_design-removebg-preview.png" alt="" style="height: 100% ; width: 100%;">
     </div>
     <div class="body1">
         <h1>Welcome to a place where you not <br>
