--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome Page</title>
-    <link rel="stylesheet" href="welcomePg.css">
+    <link rel="stylesheet" href="./css/welcomePg.css">
 </head>
 
 <body>
     <div class="logo">
-        <img src="Untitled_design-removebg-preview.png" alt="" style="height: 100% ; width: 100%;">
+        <img src="./img/Untitled_design-removebg-preview.png" alt="" style="height: 100% ; width: 100%;">
     </div>
     <div class="body1">
         <h1>Welcome to a place where you not <br>
