--- a/sign-up.html
+++ b/sign-up.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up Page</title>
-    <link rel="stylesheet" href="sign-up.css">
+    <link rel="stylesheet" href="./css/sign-up.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 </head>
@@ -21,25 +21,19 @@
 
         <form action="" id="signup-form">
             <div>
-                    <!-- <span class="fname">Firstname</span> -->
-                    <input type="text" name="fname" id="fname" placeholder="Fullname">
+                <input type="text" name="fname" id="fname" placeholder="Fullname">
 
-                    <!-- <span class="lname">Lastname</span> -->
-                    <input type="text" name="lname" id="lname" placeholder="Email address">
+                <input type="text" name="lname" id="lname" placeholder="Email address">
 
-                    <!-- <span class="password">Password</span> -->
-                    <input type="password" name="password" id="password" placeholder="Password">
-                    <i class="fas fa-eye" id="togglePassword"></i>
+                <input type="password" name="password" id="password" placeholder="Password">
+                <i class="fas fa-eye" id="togglePassword"></i>
 
-                    <span class="password-des">Use 8 or more characters with a mix of letters, numbers and symbols</span>
+                <span class="password-des">Use at least 8 characters with a mix of letters, numbers and symbols</span>
 
-                    <!-- <hr style="float: left;"> <span class="or">OR</span>
-                    <hr style="float: right;  margin-right: 10%;"> -->
-
-                    <div class="google">
-                        <img class="w-[28px] mr-2" src="https://playtht-website-assets.s3.amazonaws.com/img/brand/google.svg" alt="icon">
-                        <span>Continue With Google</span>
-                    </div>
+                <div class="google">
+                    <img class="w-[28px] mr-2" src="https://playtht-website-assets.s3.amazonaws.com/img/brand/google.svg" alt="icon">
+                    <span>Continue With Google</span>
+                </div>
             </div>
         
             <input type="checkbox" name="terms" id="terms">
