--- a/sign-up.html
+++ b/sign-up.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up Page</title>
-    <link rel="stylesheet" href="./css/sign-up.css">
+    <link rel="stylesheet" href="sign-up.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 </head>
 <body>
     <section class="logo">
         <div>
-            <!-- <img src="./img/IMG-20230720-WA0008.jpg" alt="" style="width: 100%; height: 100%;"> -->
+            <!-- <img src="IMG-20230720-WA0008.jpg" alt="" style="width: 100%; height: 100%;"> -->
         </div>
 
     </section>
