--- a/index.html
+++ b/index.html
@@ -4,30 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome Page</title>
-    <link rel="stylesheet" href="welcomePg.css">
+    <link rel="stylesheet" href="./css/welcomePg.css">
 </head>
 
 <body>
     <div class="logo">
-        <img src="Untitled_design-removebg-preview.png" alt="" style="height: 100% ; width: 100%;">
+        <img src="./img/Untitled_design-removebg-preview.png" alt="" style="height: 100% ; width: 100%;">
     </div>
     <div class="body1">
         <h1>Welcome to a place where you not <br>
             only shop but you choose and own <br>
             your style.
         </h1>
-        <a href="./sign-up.html">
-            <button class="signup button">Sign-Up</button>
-        </a>
+        <div class="signup button">
+            <a href="./sign-up.html">Sign-Up</a>
+        </div>
     </div> 
 
     <div class="body2">
         <h2>
             Already have an account?
         </h2>
-        <a href="#">
-            <button class="login button">Login</button>
-        </a>
+        <div class="login button">
+            <a href="#">Login</a>
+        </div>
     </div>
    
 </body>
