--- a/homePage.html
+++ b/homePage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="./css/homePage.css">
+    <link rel="stylesheet" href="homePage.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
   
@@ -13,7 +13,7 @@
    
     <nav>
         <div class="logo">
-            <img src="./img/IMG-20230720-WA0008-removebg.png" alt="" style="width: 80%; height: 300%; position: relative;  top: -60px;">
+            <img src="IMG-20230720-WA0008-removebg.png" alt="" style="width: 80%; height: 300%; position: relative;  top: -60px;">
         </div>
 
         <div class="links">
@@ -142,6 +142,6 @@
         </div>
     </section>
 
-    <script src="./js/anim.js"></script>
+    <script src="anim.js"></script>
 </body>
 </html>
