--- a/sign-up.html
+++ b/sign-up.html
@@ -45,7 +45,7 @@
             </button>
         </form>
         
-        <p class="login">Already have an account?   <a href=""> Login</a></p>
+        <p class="login">Already have an account?   <a href="homePage.html"> Login</a></p>
 
 
     </section>
