--- a/homePage.html
+++ b/homePage.html
@@ -13,7 +13,7 @@
    
     <nav>
         <div class="logo">
-            <img src="IMG-20230720-WA0008-removebg.png" alt="" >
+            <img src="FINAL-LOGO-DESIGN.png" alt="logo" >
         </div>
 
         <div class="links">
