--- a/sign-up.html
+++ b/sign-up.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up Page</title>
-    <link rel="stylesheet" href="./css/sign-up.css">
+    <link rel="stylesheet" href="sign-up.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 </head>
@@ -67,6 +67,6 @@
         </span>
     </span> -->
 
-   <script src="./js/sign.up.js"></script>   
+   <script src="sign.up.js"></script>   
 </body>
 </html>
